--- a/package.json
+++ b/package.json
@@ -41,12 +41,14 @@
     "helmet": "^3.9.0",
     "http-errors": "~1.6.2",
     "jsdom": "^11.11.0",
+    "moment": "^2.22.2",
     "mongoose": "^5.1.3",
     "morgan": "~1.9.0",
     "node-sass": "^4.9.0",
-    "react": "^16.4.0",
+    "react": "^16.4.1",
     "react-addons-css-transition-group": "^15.6.2",
     "react-addons-transition-group": "^15.6.2",
+    "react-dates": "^17.1.1",
     "react-dom": "^16.4.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
@@ -71,7 +73,7 @@
     "redux-devtools-dock-monitor": "^1.1.3",
     "redux-devtools-log-monitor": "^1.4.0",
     "redux-logger": "^3.0.6",
-    "uglifyjs-webpack-plugin": "^1.2.5",
+    "uglifyjs-webpack-plugin": "^1.2.7",
     "webpack-cli": "^2.1.5",
     "webpack-dev-middleware": "^3.1.3",
     "webpack-hot-middleware": "^2.22.2"
