--- a/package.json
+++ b/package.json
@@ -48,11 +48,12 @@
     "react": "^16.4.1",
     "react-addons-css-transition-group": "^15.6.2",
     "react-addons-transition-group": "^15.6.2",
+    "react-bootstrap-typeahead": "^3.1.5",
     "react-dates": "^17.1.1",
     "react-dom": "^16.4.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
-    "reactstrap": "^6.0.1",
+    "reactstrap": "^6.3.0",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
     "sass-loader": "^7.0.2",
@@ -68,7 +69,7 @@
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.4.0",
     "jest": "^23.0.1",
-    "react-hot-loader": "^4.0.0",
+    "react-hot-loader": "^4.3.3",
     "redux-devtools": "^3.4.1",
     "redux-devtools-dock-monitor": "^1.1.3",
     "redux-devtools-log-monitor": "^1.4.0",
