--- a/.eslintrc
+++ b/.eslintrc
@@ -7,11 +7,12 @@
     "node": true,
   },
   "rules": {
+    "consistent-return": ["error", { "treatUndefinedAsUnspecified": true }],
     "no-unused-vars": ["error", {"argsIgnorePattern": "next"}],
     "react/prop-types": [0],
     "import/no-extraneous-dependencies": ["error", { "devDependencies": true }],
-    "arrow-body-style": [2, "always"],
-    # "arrow-body-style": ["error", "as-needed"],
+    # "arrow-body-style": [2, "always"],
+    "arrow-body-style": ["error", "as-needed"],
     "jsx-a11y/anchor-is-valid": [ "error", {
       "components": [ "Link" ],
       "specialLink": [ "hrefLeft", "hrefRight", "to" ],
