--- a/.eslintrc
+++ b/.eslintrc
@@ -18,5 +18,6 @@
       "specialLink": [ "hrefLeft", "hrefRight", "to" ],
       "aspects": [ "noHref", "invalidHref", "preferButton" ]
     }],
+    "linebreak-style": 0,
   },
 }
