--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "ejs": "~2.5.7",
     "express": "~4.16.0",
     "express-rate-limit": "^2.11.0",
+    "express-session": "^1.15.6",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "helmet": "^3.9.0",
     "http-errors": "~1.6.2",
@@ -45,6 +46,9 @@
     "mongoose": "^5.1.3",
     "morgan": "~1.9.0",
     "node-sass": "^4.9.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^5.0.1",
     "react": "^16.4.1",
     "react-addons-css-transition-group": "^15.6.2",
     "react-addons-transition-group": "^15.6.2",
