availity-reactstrap-validation installed

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/jimyandres/Tech-Fly#readme",
   "dependencies": {
+    "availity-reactstrap-validation": "^2.0.6",
     "babel-core": "^6.26.3",
     "babel-jest": "^23.0.1",
     "babel-loader": "^7.1.4",
